# keystore-periphery

./: .gitignore  .gitmodules  README.md  remappings.txt
.github/workflows/: check.yml  foundry.yml  rust-lints.yml  rust-tests.yml
contracts/: .env.example  foundry.toml
contracts/deployment-config/: KeystoreValidator.json
contracts/proofs/: Exclusion.json  StorageProof.json  UnpaddedStorageProof.json
contracts/script/: KeystoreValidator.s.sol
contracts/src/: IValidationModule.sol  KeystoreAggregator.sol  KeystoreStateOracle.sol  KeystoreValidator.sol  StorageProofVerifier.sol
contracts/src/interfaces/: IKeyDataConsumer.sol  IKeystoreStateOracle.sol  IL1Block.sol
contracts/src/keydata-consumers/: ECDSAConsumer.sol
contracts/src/libraries/: KeystoreIMT.sol
contracts/src/state/: KeystoreStateOracle.sol  OPStackStateOracle.sol
contracts/test/: KeystoreAggregator.t.sol  KeystoreValidator.t.sol
contracts/test/7579/: KeystoreValidator.t.sol
contracts/test/example/: ECDSAConsumer.sol
crates/: .gitignore  Cargo.toml  rust-toolchain.toml
crates/signature-prover/guest/: Cargo.toml
crates/signature-prover/guest/src/: lib.rs  public_values.rs
crates/signature-prover/lib/: Cargo.toml
crates/signature-prover/lib/src/: build_guest.rs  keygen.rs  lib.rs  prover_context.rs  test_utils.rs
crates/signature-prover/server/: Cargo.toml
crates/signature-prover/server/src/: api.rs  cli.rs  error.rs  lib.rs  server.rs  types.rs  validator.rs
crates/signature-prover/server/src/keystore_types/: contract.rs  decoder.rs  hash.rs  mod.rs  transaction.rs
crates/signature-prover/server/src/keystore_types/abi/: AxiomKeystoreRollup.json
crates/signature-prover/server/src/keystore_types/transaction/: account.rs  deposit_tx.rs  l2_tx.rs  mod.rs  option_bytes.rs  update_tx.rs  withdraw_tx.rs
src/interfaces/: IStorageProofVerifier.sol
test/: KeystoreValidator.t.sol
