[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
exclude = [".github/"]

[workspace]
members = [
    "signature-prover/guest/",
    "signature-prover/lib/",
    "signature-prover/server/",
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.dependencies]

signature-prover-guest = { path = "signature-prover/guest", default-features = false }
signature-prover-lib = { path = "signature-prover/lib", default-features = false }
signature-prover-server = { path = "signature-prover/server", default-features = false }

alloy-consensus = { version = "0.11.1", default-features = false }
alloy-contract = "0.11.1"
alloy-json-rpc = { version = "0.11.1", default-features = false }
alloy-network = { version = "0.11.1", default-features = false }
alloy-primitives = { version = "0.8.21", default-features = false }
alloy-provider = { version = "0.11.1", default-features = false }
alloy-pubsub = { version = "0.11.1", default-features = false }
alloy-rpc-types-eth = { version = "0.11.1", default-features = false }
alloy-rpc-client = { version = "0.11.1", default-features = false }
alloy-signer = { version = "0.11.1", default-features = false }
alloy-signer-local = "0.11.1"
alloy-transport = { version = "0.11.1", default-features = false }
alloy-transport-http = { version = "0.11.1", default-features = false }

alloy-dyn-abi = { version = "0.8.21", default-features = false }
alloy-sol-macro = { version = "0.8.21", default-features = false }
alloy-sol-types = { version = "0.8.21", default-features = false }

alloy-rlp = { version = "0.3.11", default-features = false }

op-alloy-network = "0.1.5"
op-alloy-rpc-types = "0.1.5"

openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.1" }
openvm-keccak256-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.1" }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.0.0-rc.0" }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.1" }
openvm-native-compiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.1" }
openvm-native-recursion = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.1" }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.1" }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.1" }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.1" }

halo2-axiom = "0.4.4"
snark-utils = { git = "https://github.com/axiom-crypto/snark-utils.git" }
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier", branch = "zkvm-v0.1", default-features = false }

serde = { version = "1.0.201", default-features = false }
serde_json = "1.0.117"
bitcode = "0.6.3"

lazy_static = "1.5.0"
thiserror = "1.0.63"
url = "2.5.2"
clap = "4.5.26"
eyre = "0.6.12"
once_cell = "1.20.2"
itertools = "0.14.0"
rand = "0.8.5"
hex = "0.4.3"
hex-literal = "0.4.1"
async-trait = "0.1.85"
toml = "0.8"

tokio = { version = "1.44.2", default-features = false }

jsonrpsee = { version = "0.24.7", default-features = false }
tower = { version = "0.4.13", default-features = false }

metrics = { version = "0.23.0" }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3.17", default-features = false }
