[package]
name = "signature-prover-server"
version = "0.1.0"
edition = "2021"

[dependencies]
signature-prover-lib = { workspace = true }
signature-prover-guest = { workspace = true }

snark-utils = { workspace = true }
jsonrpsee = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["timeout"] }
async-trait = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["alloc", "derive"] }
serde_json.workspace = true
clap.workspace = true
toml.workspace = true
thiserror.workspace = true
lazy_static.workspace = true

alloy-primitives = { workspace = true, features = ["serde", "getrandom"] }
alloy-rlp = { workspace = true }
alloy-sol-types = { workspace = true, default-features = false }
alloy-dyn-abi = { workspace = true }

openvm-sdk = { workspace = true }
openvm-native-recursion = { workspace = true }
snark-verifier-sdk = { workspace = true, features = [
    "loader_halo2",
    "halo2-axiom",
    "display",
] }

[dev-dependencies]
lazy_static.workspace = true
alloy-rlp.workspace = true

[features]
bench-metrics = ["openvm-sdk/bench-metrics"]
